--- a/package.json
+++ b/package.json
@@ -2,40 +2,66 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "dotenv -e .env.local -- next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:local:pull": "dotenv -e .env.local -- npx prisma db pull",
+    "prisma:local:push": "dotenv -e .env.local -- npx prisma db push"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.1.0",
     "@headlessui/react": "^1.7.17",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
-    "@tremor/react": "^3.10.0",
+    "@mantine/core": "^7.5.0",
+    "@mantine/form": "^7.5.0",
+    "@mantine/hooks": "^7.5.0",
+    "@mantine/tiptap": "^7.5.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.0",
+    "@tabler/icons-react": "^2.46.0",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@tanstack/react-query": "^5.18.1",
+    "@tiptap/extension-link": "^2.2.0",
+    "@tiptap/react": "^2.2.0",
+    "@tiptap/starter-kit": "^2.2.0",
     "@types/js-cookie": "^3.0.5",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/postgres": "^0.5.0",
-    "autoprefixer": "^10.4.16",
+    "@vercel/postgres": "^0.5.1",
+    "crypto-js": "^4.2.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
     "js-cookie": "^3.0.5",
-    "next": "14.0.0",
-    "next-auth": "5.0.0-beta.3",
-    "postcss": "^8.4.31",
+    "next": "^14.1.0",
+    "next-auth": "4.24.5",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "tailwindcss": "^3.3.5",
+    "swr": "^2.2.4",
     "typescript": "5.2.2"
   },
   "prettier": {
     "arrowParens": "always",
     "singleQuote": true,
     "tabWidth": 2,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "semi": false
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.18.1",
+    "@types/crypto-js": "^4.2.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "postcss-preset-mantine": "^1.12.3",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prisma": "^5.9.0",
+    "tailwindcss": "^3.4.1"
   }
 }
