--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.1.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
@@ -32,6 +34,7 @@
     "@types/react-dom": "18.2.14",
     "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
+    "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
@@ -40,8 +43,8 @@
     "next-auth": "4.24.5",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "swr": "^2.2.4",
     "typescript": "5.2.2"
