--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "maplibre-gl": "^4.0.1",
     "next": "^14.1.0",
     "next-auth": "4.24.5",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "server-only": "^0.0.1",
     "swr": "^2.2.4",
     "typescript": "5.2.2"
@@ -59,6 +64,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.18.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/leaflet": "^1.9.8",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "postcss-preset-mantine": "^1.12.3",
